--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,8 +36,8 @@ jobs:
     
           - name: Setup Terraform with specific version on the runner
             uses: hashicorp/setup-terraform@v2
-            #with:
-              #terraform_version: 1.9.2
+            with:
+              terraform_version: 1.9.2
     
           - name: Terraform Init
             id: init
