--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,3 +58,29 @@ jobs:
           - name: Terraform plan Status
             if: steps.plan.outcome == 'failure'
             run: exit 1
+
+          - name: Terraform Apply
+            id: apply
+            if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+            run: terraform apply -auto-approve -input=false -parallelism=1 planfile
+           
+            # If only terrform apply success below steps will run
+            # Configure AWS credentials for kubectl access kubeconfig file
+
+          - name: Configure AWS credentials
+            uses: aws-actions/configure-aws-credentials@v1
+            with:
+              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              aws-region: ${{ env.AWS_REGION }}
+          
+            # for create ingress controller we need to access kubeconfig file
+          - name: Get Kube config file
+            id: getconfig
+            if: steps.apply.outcome == 'success'
+            run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+
+            # Deploy the application we need Install Ingress Controller for EKS Cluster  
+          - name: Install Ingress Controller
+            if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
+            run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/aws/deploy.yaml
